--- a/styles/styles.css
+++ b/styles/styles.css
@@ -799,6 +799,7 @@ text-align: center;
       left:0; 
       right:0; 
       padding: 0;
+      background-image: url(../img/insta-100.png) !important;
       
   } 
     
@@ -965,6 +966,7 @@ text-align: center;
       right:0; 
       padding: 0;
       overflow-y: auto;
+      background-image: url(../img/insta-100.png) !important;
       
   } 
     
@@ -1122,6 +1124,10 @@ text-align: center;
   @media screen and (max-width: 600px) {
     header {
       padding: 0 !important;
+    }
+    
+    body {
+      background-image: url(../img/insta-100.png) !important;
     }
   
     .theme-btn {
