--- a/styles/styles.css
+++ b/styles/styles.css
@@ -625,7 +625,7 @@ text-align: center;
     display: flex;
     justify-content: flex-start;
   }
-  @media screen and (max-width: 375px) {
+  @media screen and (max-width: 360px) {
     html, body { 
       position:fixed; 
       top:0; 
@@ -640,15 +640,15 @@ text-align: center;
       margin-left: 0px;
       width: 500px;
       padding-left: 0px !important;
-      height: 175px;
+      height: 150px;
       overflow:unset;
-      font-size: smaller;
+      font-size: 2em;
       
       
     }
     #showcase {
       z-index: 50;
-      height: 59%;
+      height: 300px;
       
       
     }
